Port to 1.21.5 (#388)
* Minecraft 1.21.4

* Update access wideners

* fixed a handful of mixin signatures, updated versions to target 1.21.4

* updated `ItemStack::damage` signature to match new mappings

* Fix some mapping names that changed

* Update milk drinking mixin target

* progress on ArmorFeatureRendererMixin fixing

* Bump gradle and quilt loom versions

* fixed multiple javadoc references (+ some mixins)

* too tired to come up with a witty line for this commit. i fixed a few errors ig idfk anymore i can't bear mojang's codebase

* sigh

* refactored usages of DimensionTransition in QuiltDimensions

* Hopefully fix ThreadedChunkManagerMixin

* fixed a few mixins, annotated others with FIXME along w/ relevant info

* Fix most compiler errors in entity_events

* Update quilt client commands

* fixed NetherBiomeSourceParameterMixin, annotated remaining mixins

* Document AbstractFurnaceBlockEntityMixin

* Add possible fixes for AbstractFurnaceBlockEntityMixin

* NBT: BurnTime -> lit_time_remaining

https://www.minecraft.net/en-us/article/minecraft-1-21-4-pre-release-2

* Fix custom bows & screen render tests

* Fix EndCrystalMixin in crash test mod

* Fix everything except Registry & Resource Loader

* Convert ResourceMetadataSectionReader usage to MetadataSectionType

* Fix AbstractFurnaceBlockEntityMixin

* Use `WrapOperation` instead of `ModifyVariable`

* Remove `Debug` annotation

Oops! That wouldn't have worked either way. Kept that around trying to debug it and forgot to remove it before pushing.

* Make ScrollableMultiTextWidget inherit MultilineScrollableWidget

This just happens to unlock an astounding 45 compiler
errors and this seems to mean that I will have a LOT
more errors to fix than I initially believed. Not the
most thrilled now

* Remove BUILTIN_ITEM_MODELS from ResourceLoaderKeys & fix Holder::value usage

* Fully fix and test resource loader

* Bump Quilt Mappings to 1.21.4 version 4

* Fix more classes in the registry module

* Fix eve