@@ -23,11 +23,12 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.function.Function;
 
+import it.unimi.dsi.fastutil.ints.IntList;
 import org.jetbrains.annotations.Nullable;
 
+import net.minecraft.text.TextUtil;
 import net.minecraft.text.MutableText;
 import net.minecraft.text.Text;
-import net.minecraft.text.Texts;
 import net.minecraft.util.Formatting;
 import net.minecraft.util.Identifier;
 
@@ -37,9 +38,11 @@ import org.quiltmc.qsl.registry.impl.sync.registry.RegistryFlag;
 import org.quiltmc.qsl.registry.impl.sync.registry.SynchronizedRegistry;
 
 public class RegistrySyncText {
-	public static Text missingRegistryEntries(Identifier registryId, Collection<SynchronizedRegistry.MissingEntry> missingEntries) {
+	public static Text missingRegistryEntries(
+			Identifier registryId, Collection<SynchronizedRegistry.MissingEntry> missingEntries
+	) {
 		var namespacesSet = new HashSet<String>(missingEntries.size());
-		for (var entry : missingEntries) {
+		for (SynchronizedRegistry.MissingEntry entry : missingEntries) {
 			if (!RegistryFlag.isOptional(entry.flags())) {
 				namespacesSet.add(entry.identifier().getNamespace());
 			}
@@ -48,9 +51,11 @@ public class RegistrySyncText {
 		var namespacesList = new ArrayList<>(namespacesSet);
 		namespacesList.sort(Comparator.naturalOrder());
 
-		var namespaceText = entryList(namespacesList, Text::literal).formatted(Formatting.GRAY);
+		MutableText namespaceText = entryList(namespacesList, Text::literal).formatted(Formatting.GRAY);
 
-		return Text.translatableWithFallback("quilt.core.registry_sync.missing_entries", "Missing required entries in registry '%s' for namespaces:\n%s",
+		return Text.translatableWithFallback(
+				"quilt.core.registry_sync.missing_entries",
+				"Missing required entries in registry '%s' for namespaces:\n%s",
 				Text.literal(registryId.toString()).formatted(Formatting.YELLOW),
 				namespaceText
 		);
@@ -63,17 +68,23 @@ public class RegistrySyncText {
 		var lines = 0;
 
 		while (lines < 2 && !namespacesList.isEmpty()) {
-			var max = lines == 0 ? 38 : 30;
+			int max = lines == 0 ? 38 : 30;
 			while (textLength < max && !namespacesList.isEmpty()) {
-				var t = toText.apply(namespacesList.remove(0));
+				Text t = toText.apply(namespacesList.remove(0));
 				namespaceText.append(t);
 
 				textLength += t.getString().length();
 
 				if (!namespacesList.isEmpty()) {
-					var alt = (lines + toText.apply(namespacesList.get(0)).getString().length() < max && lines == 1);
+					boolean alt = (lines + toText
+							.apply(namespacesList.getFirst()).getString().length() < max && lines == 1);
 					if (namespacesList.size() == 1 || alt) {
-						namespaceText.append(Text.translatableWithFallback("quilt.core.registry_sync.and", " and ").formatted(alt ? Formatting.GRAY : Formatting.DARK_GRAY));
+						namespaceText.append(
+								Text.translatableWithFallback(
+									"quilt.core.registry_sync.and", " and "
+								)
+								.formatted(alt ? Formatting.GRAY : Formatting.DARK_GRAY)
+						);
 						textLength += 6;
 					} else {
 						namespaceText.append(Text.literal(", ").formatted(Formatting.DARK_GRAY));
@@ -91,35 +102,52 @@ public class RegistrySyncText {
 		}
 
 		if (!namespacesList.isEmpty()) {
-			namespaceText.append(Text.translatableWithFallback("quilt.core.registry_sync.more", "%s more...", namespacesList.size()));
+			namespaceText.append(Text.translatableWithFallback(
+					"quilt.core.registry_sync.more", "%s more...", namespacesList.size())
+			);
 		}
 
 		return namespaceText;
 	}
 
-	public static Text mismatchedStateIds(Identifier registryId, @Nullable Identifier expectedBlockId, @Nullable Identifier foundBlockId) {
-		return Text.translatableWithFallback("quilt.core.registry_sync.incorrect_state", "State validation failed.\nExpected object owner '%s' ('%s'), found '%s'",
-				expectedBlockId == null ? Text.literal("null").formatted(Formatting.RED) : Text.literal(expectedBlockId.toString()).formatted(Formatting.YELLOW),
+	public static Text mismatchedStateIds(
+			Identifier registryId, @Nullable Identifier expectedBlockId, @Nullable Identifier foundBlockId
+	) {
+		return Text.translatableWithFallback(
+				"quilt.core.registry_sync.incorrect_state",
+				"State validation failed.\nExpected object owner '%s' ('%s'), found '%s'",
+				expectedBlockId == null ? Text.literal("null").formatted(Formatting.RED)
+					: Text.literal(expectedBlockId.toString()).formatted(Formatting.YELLOW),
 				Text.literal(registryId.toString()).formatted(Formatting.GRAY),
-				foundBlockId == null ? Text.literal("null").formatted(Formatting.RED) : Text.literal(foundBlockId.toString())
+				foundBlockId == null ? Text.literal("null").formatted(Formatting.RED)
+					: Text.literal(foundBlockId.toString())
 		);
 	}
 
 	public static Text missingRegistry(Identifier identifier, boolean exists) {
-		return Text.translatableWithFallback("quilt.core.registry_sync." + (exists ? "unsupported" : "missing") + "_registry", "Tried to sync '%s' registry, which is " + (exists ? "unsupported" : "missing" + "!"), identifier.toString());
+		return Text.translatableWithFallback(
+				"quilt.core.registry_sync." + (exists ? "unsupported" : "missing") + "_registry",
+				"Tried to sync '%s' registry, which is " + (exists ? "unsupported" : "missing" + "!"),
+				identifier.toString()
+		);
 	}
 
 	public static Text unsupportedModVersion(List<ModProtocolDef> unsupported, ModProtocolDef missingPrioritized) {
 		if (missingPrioritized != null && !missingPrioritized.versions().isEmpty()) {
-			var x = Text.translatableWithFallback("quilt.core.registry_sync.require_modpack_protocol", "This server requires %s with protocol version of %s!",
+			MutableText x = Text.translatableWithFallback(
+					"quilt.core.registry_sync.require_modpack_protocol",
+					"This server requires %s with protocol version of %s!",
 					Text.literal(missingPrioritized.displayName()).formatted(Formatting.YELLOW),
 					missingPrioritized.versions().getInt(0)
 			);
 
 			if (ModProtocolImpl.enabled && ModProtocolImpl.modpackDef != null) {
 				x.append("\n").append(
-						Text.translatableWithFallback("quilt.core.registry_sync.modpack_protocol", "You are on %s with protocol version of %s.",
-								Text.literal(ModProtocolImpl.modpackDef.displayName()).formatted(Formatting.GOLD), ModProtocolImpl.modpackDef.versions().getInt(0)
+						Text.translatableWithFallback(
+							"quilt.core.registry_sync.modpack_protocol",
+							"You are on %s with protocol version of %s.",
+							Text.literal(ModProtocolImpl.modpackDef.displayName())
+								.formatted(Formatting.GOLD), ModProtocolImpl.modpackDef.versions().getInt(0)
 						)
 				);
 			}
@@ -129,9 +157,12 @@ public class RegistrySyncText {
 			System.out.println(unsupported.size());
 			var namespacesList = new ArrayList<>(unsupported);
 			namespacesList.sort(Comparator.comparing(ModProtocolDef::displayName));
-			var namespaceText = entryList(namespacesList, RegistrySyncText::protocolDefEntryText).formatted(Formatting.GRAY);
+			MutableText namespaceText = entryList(namespacesList, RegistrySyncText::protocolDefEntryText)
+					.formatted(Formatting.GRAY);
 
-			return Text.translatableWithFallback("quilt.core.registry_sync.unsupported_mod_protocol", "Unsupported mod protocol versions for:\n%s",
+			return Text.translatableWithFallback(
+					"quilt.core.registry_sync.unsupported_mod_protocol",
+					"Unsupported mod protocol versions for:\n%s",
 					namespaceText
 			);
 		}
@@ -139,18 +170,22 @@ public class RegistrySyncText {
 
 	private static Text protocolDefEntryText(ModProtocolDef def) {
 		MutableText version;
-		var x = def.versions();
-		if (x.size() == 0) {
+		IntList x = def.versions();
+		if (x.isEmpty()) {
 			version = Text.literal("WHAT??? HOW???");
 		} else if (x.size() == 1) {
 			version = Text.literal("" + x.getInt(0));
 		} else {
-			version = (MutableText) Texts.join(x.subList(0, Math.min(x.size(), 4)), n -> Text.literal(n.toString()));
+			version = (MutableText) TextUtil.join(x.subList(0, Math.min(x.size(), 4)), n -> Text.literal(n.toString()));
 			if (x.size() > 4) {
-				version = version.append(Texts.GRAY_DEFAULT_SEPARATOR).append("...");
+				version = version.append(TextUtil.GRAY_DEFAULT_SEPARATOR).append("...");
 			}
 		}
 
-		return Text.translatableWithFallback("quilt.core.registry_sync.protocol_entry", "%s (%s)", def.displayName(), version);
+		return Text.translatableWithFallback(
+				"quilt.core.registry_sync.protocol_entry",
+				"%s (%s)",
+				def.displayName(), version
+		);
 	}
 }
